# polyphase-sort

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  setup.bat  setup.py  setup.sh
docs/: algo_flow.md
src/: CMakeLists.txt  main.cpp
src/common/: CMakeLists.txt  byte.hpp  factory_functions.hpp  filetools.cpp  filetools.hpp
src/logger/src/: CMakeLists.txt  Logger.cpp  Logger_internal.hpp
src/logger/src/include/logger/: Logger.hpp
src/polyphase_sort_app/src/: App.cpp  App.hpp  CMakeLists.txt  main.cpp
src/sorter/: CMakeLists.txt
src/sorter/src/: CMakeLists.txt  Distributor.cpp  Distributor.hpp  Merger.cpp  Merger.hpp  OutTmpTapeGenerator.hpp  Tape.hpp
src/sorter/tests/: CMakeLists.txt  Distributor_test.cpp  Merger_test.cpp  main.cpp
src/sorter/tests/data/: 01_prepared_series_8_coalescing_4_page_size_64.records  01_series_120_page_size_64.records  01_series_25_page_size_64.records  01_series_512_page_size_4096.records  01_series_60_page_size_64.records  02_prepared_series_8_coalescing_4_page_size_64.records  02_series_120_page_size_64.records  02_series_25_page_size_64.records  02_series_512_page_size_4096.records  02_series_60_page_size_64.records  03_series_120_page_size_64.records  03_series_25_page_size_64.records  03_series_512_page_size_4096.records  03_series_60_page_size_64.records  descending_series_page_size_64.records  fibonacci_series_2584_page_size_4096.records  fibonacci_series_4181_page_size_4096.records  longer_distributed_tape_page_size_64.records  no_coalescing_series_6_with_2_dummy_page_size_64.records  prepared_series_5_records_5_page_size_64.records  reference_descending_page_size_64.records  shorter_distributed_tape_page_size_64.records
src/tape/: CMakeLists.txt
src/tape/src/: CMakeLists.txt  IHardDriveAccessor.hpp  Page.cpp  Page.hpp  PageReader.cpp  PageReader.hpp  PageWriter.cpp  PageWriter.hpp  Record.cpp  Record.hpp  RecordsPage.cpp  RecordsPage.hpp  RunView.cpp  RunView.hpp  Series.hpp  SeriesView.cpp  SeriesView.hpp  Tape.cpp  Tape.hpp  TapeHeaders.hpp  TapeReader.cpp  TapeReader.hpp  TapeWriter.cpp  TapeWriter.hpp
src/tape/tests/: CMakeLists.txt  PageReader_test.cpp  PageWriter_test.cpp  Page_test.cpp  Record_test.cpp  RecordsPage_test.cpp  TapeReader_test.cpp  TapeWriter_test.cpp  TestConfig.cpp  TestConfig.hpp  main.cpp
src/tape/tests/data/: page_size_24_pages_3_records_6.records  page_size_40_pages_2_records_7.records  tape_page_size_36_pages_2_records_7.records  valid_tape_size_4_records_4.records
src/tape_generator/: CMakeLists.txt  TapeGenerator.cpp  TapeGenerator.hpp  main.cpp
src/tape_info/: CMakeLists.txt  Info.cpp  Info.hpp  main.cpp
src/test_config/: CMakeLists.txt  TestConfig.cpp  TestConfig.hpp
