cmake_minimum_required(VERSION 3.18)
project(polyphase_sort CXX)
set(CMAKE_CXX_STANDARD 17)
set(CXX_STANDARD_REQUIRED ON)
set(CXX_EXTENSIONS OFF)
if (TESTING)
    enable_testing()
    message("Testing enabled!")
endif()
set_property(GLOBAL PROPERTY USE_FOLDERS TRUE)
if(MSVC)
    set(CMAKE_CXX_FLAGS_PROFILE "/O2")
endif()
add_subdirectory(3rdParty)

add_subdirectory(src)