cmake_minimum_required(VERSION 3.16)
project(polyphase_sort CXX)
set(CMAKE_CXX_STANDARD 20)
set(CXX_STANDARD_REQUIRED ON)
set(CXX_EXTENSIONS OFF)
set(TESTING 1)
if (TESTING)
    enable_testing()
    message("Testing enabled!")
endif()
set_property(GLOBAL PROPERTY USE_FOLDERS TRUE)
if(MSVC)
    set(CMAKE_CXX_FLAGS_PROFILE "/O2")
endif()
add_subdirectory(3rdParty)

add_subdirectory(src)