cmake_minimum_required(VERSION 3.16)
project(polyphase_sort CXX)
set(CMAKE_CXX_STANDARD 20)
set(CXX_STANDARD_REQUIRED ON)
set(CXX_EXTENSIONS OFF)
if (TESTING)
    enable_testing()
    message("Testing enabled!")
endif()
if (ENABLE_LOGGING)
    add_definitions(-DENABLE_LOGGING=${ENABLE_LOGGING})
    message("Logging enabled!")
endif()
if (ENABLE_PRINT)
    add_definitions(-DENABLE_PRINT=${ENABLE_PRINT})
    message("Printing enabled!")
endif()

set_property(GLOBAL PROPERTY USE_FOLDERS TRUE)
if(MSVC)
    set(CMAKE_CXX_FLAGS_PROFILE "/O2i")
endif()
add_subdirectory(3rdParty)

add_subdirectory(src)